# cards

./: -d  .gitignore  CMakeLists.txt  Card.h  DataService.cpp  DataService.h  DatabaseAccess.cpp  DatabaseAccess.h  Dockerfile  HttpResponseBuilder.cpp  HttpResponseBuilder.h  README.md  ServerLogic.cpp  ServerLogic.h  ServerMain.cpp  Session.cpp  Session.h  database.db  docker-compose.yaml  helloworld  http_tcpServer_linux  server_linux
doc/: API_testing.md
src/: ServerLogic.cpp  ServerLogic.h  ServerMain.cpp  Session.cpp  Session.h
src/handlers/: CardHandler.cpp  CardHandler.h  FolderHandler.cpp  FolderHandler.h
src/models/: Card.h  Folder.h  User.h  UserSession.h
src/services/: DataService.cpp  DataService.h  DatabaseAccess.cpp  DatabaseAccess.h
src/utils/: HttpResponseBuilder.cpp  HttpResponseBuilder.h  IEntityHandler.h  RequestHandlerFactory.h  Types.h  Utility.cpp  Utility.h
